# openemr

ai-agent/: .env.example  Dockerfile  pyproject.toml
ai-agent/ai_agent/: agent.py  config.py  openemr_client.py
ai-agent/ai_agent/tools/: find_appointments.py
ai-agent/scripts/: seed_data.py
ai-agent/tests/: test_agent.py  test_find_appointments.py  test_openemr_client.py
docker/development-easy/: docker-compose.yml
docs/: research-scaffolding-bd313.md  research-seed-data-bd-t1a.md
