[project]
name = "openemr-ai-agent"
version = "0.1.0"
description = "LangGraph AI agent for OpenEMR"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.132.0",
    "httpx>=0.27.0",
    "langchain-anthropic>=1.3.3",
    "langchain-core>=1.2.4",
    "langgraph>=0.2.70",
    "langsmith>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
